# sdlengine

./: .gitignore  Application.cpp  Application.h  CMakeCache.txt  CMakeLists.txt  Camera.cpp  Camera.h  GameLoop.cpp  GameLoop.h  Makefile  README.md  Settings.cpp  Transform.cpp  Transform.h  cmake_install.cmake  config.json  engine  engine.cbp  engine.layout  main.cpp  makefile  objloader.h  readJpeg.cxx  readObject_v.cxx  readObject_v_vt_vn.cxx
Documentation/: Activity Log.xlsx  CIS422 Project Document.docx  Demo Guide.docx  Developer Documentation.docx  Installation Guide.docx  Project Gantt Chart.xlsx  UserGuide.docx
Entities/: ECS.cpp  ECS.hpp  EntityComponent.cpp  EntityComponent.hpp  System.cpp  System.hpp
cmake/: FindGlew.cmake  FindSDL2.cmake  README.md
core/: EntityShared.hpp  GameCore.cpp  GameCore.h  GameLoop.cpp  GameLoop.h  GameManager.cpp  GameManager.h  GameManager.hpp  GameManger.cpp  Input.cpp  Input.hpp  InputHandler.cpp  InputHandler.hpp  ObjectShared.hpp  Transform.cpp  main.cpp
core/rendering/glfiles/: Mesh.h
core/rendering/sdlfiles/: Display.cpp  Display.h
core/shaders/: testshader.frag
err/: Error.cpp  Error.h  Error.hpp
error/: ErrorLog.cpp  ErrorLog.hpp
events/: Event.h  EventDispatcher.cpp  EventDispatcher.hpp  Input.h  InputEvent.cpp  InputEvent.h  InputHandler.cpp  InputHandler.hpp  Listeners.hpp
glfiles/: Mesh.cpp  Mesh.h  ObjLoader.cpp  ObjLoader.h  Shader.cpp  Shader.h  Textures.cpp  Textures.h
glfiles/shaders/: testshader.frag  testshader.vert
lib/: stb_image.h
math/: EngineMath.hpp
platform/: RenderedApplication.cpp  RenderedApplication.hpp  Window.cpp  Window.hpp
rendering/: Drawing.cpp  Drawing.h  Mesh.cpp  Mesh.h  RenderCore.cpp  RenderCore.hpp  Shader.cpp  Shader.h  Textures.cpp  Window.cpp  Window.hpp
res/shaders/: shader.frag  shader.vert
sdlfiles/: Display.cpp  Display.h  Event.cpp
src/: GameLoop.cpp  GameLoop.h  GameLoop.h.gch  main.cpp
src/opengl/: render.cpp
src/sdlsrc/: Event.cpp  Event.h  window.cpp  window.h  window.h.gch
utils/: .Settings.hpp.swp  GameOptions.hpp  README.md  Settings.cpp  Settings.hpp  Utils.hpp
